hvega/tests/specs/gallery/error/error1.vl
{
    "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
    "data": {
        "url": "https://vega.github.io/vega-lite/data/barley.json"
    },
    "description": "Error bars showing confidence intervals",
    "encoding": {
        "y": {
            "field": "variety",
            "type": "ordinal"
        }
    },
    "layer": [
        {
            "encoding": {
                "color": {
                    "value": "black"
                },
                "x": {
                    "aggregate": "mean",
                    "axis": {
                        "title": "Barley Yield"
                    },
                    "field": "yield",
                    "scale": {
                        "zero": false
                    },
                    "type": "quantitative"
                }
            },
            "mark": {
                "filled": true,
                "type": "point"
            }
        },
        {
            "encoding": {
                "x": {
                    "aggregate": "ci0",
                    "field": "yield",
                    "type": "quantitative"
                },
                "x2": {
                    "aggregate": "ci1",
                    "field": "yield"
                }
            },
            "mark": "rule"
        }
    ]
}